# gaia

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: CONTRIBUTING.md  README.md
scripts/: deploy.sh  setup.iss
src/core/: gaia.py
src/extension/: background.js  content.js  manifest.json
src/extension/popup/: popup.html  popup.js
src/extension/utils/: __init__.py  helpers.py
tests/: test_gaia.py
